--- a/BrickBreaker/WebApplication2/CSS/MasterPageStyle.css
+++ b/BrickBreaker/WebApplication2/CSS/MasterPageStyle.css
@@ -15,3 +15,24 @@
     padding-top:28px;
 
 }
+
+#Content{
+    float:left;
+    width:80%;
+    height:auto;
+}
+
+#LeftBar{
+    float:left;
+    height:1000px;
+    width:8%;
+    background-color:darkcyan;
+    margin-right:2%;
+}
+#RightBar{
+    float:left;
+    height:1000px;
+    width:8%;
+    background-color:darkcyan;
+    margin-left:2%;
+}
